# Roman_Book_Keeper

./: Makefile  Makefile.am  Makefile.in  README.md  Roman_Numbers.txt  config.h  config.status  configure  configure.ac  configure_1  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.in  main  main.c  roman.h  roman_calculator.c  roman_calculator.lo
src/.deps/: main.Po  roman_calculator.Plo
src/.libs/: libroman.so.0.0.0  lt-main  main
tests/: .test-suite.log.swp  Makefile  Makefile.am  Makefile.in  invalid_roman  invalid_roman.c  roman_dec  roman_dec.c
tests/.deps/: invalid_roman-invalid_roman.Po  invalid_roman-roman_dec.Po  roman_dec-roman_dec.Po
tests/.libs/: invalid_roman  lt-invalid_roman  lt-roman_dec  roman_dec
